# Soft-Contamination-Prevelance

./: .gitattributes  .gitignore  CHANGES_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md  analyze_murder_mysteries.py  create_semantic_pairs_csv.py  csv_distribution_comparison.py  distribution_comparison.py  dup_compy.py  gathering_codeforces.py  mbpp_test_eval_half.csv  mbpp_test_train_half.csv  mbpp_train.csv  prompts.py  pyproject.toml  quick_json_to_csv.py  requirements.txt  setup.ps1  setup.sh  split_semantic_pairs.py
LIMA_Fast/: ds_config.json  requirements.txt  train_lima.py
analysis_scripts/: .gitignore  README.md  benchmark_contamination_analysis.py  contamination_analysis.py  csv_distribution_comparison.py  dup_compy.py  resolve_contamination_matches.py  semantic_duplicate_analysis.py  semantic_duplicate_batch.py
comparison_analysis/: .gitignore  README.md  analyze_gemini_consistency.py  analyze_semantic_dupes.py  annotate_batch.py  annotate_semantic_duplicates.py  build_all_non_unrelated.py  build_human_annotation_set.py  build_refined_codeforces_csv.py  check_annotation_overlap.py  check_stats.py  classify_dolma_codeforces_top100.py  classify_mbpp_sample100.py  classify_with_gemma.py  clean_merged_xlsx.py  codeforces_v2_duplicate_plots.py  compare_datasets.py  debug_keys.py  done.py  export_annotations.py  full_stats.py  gemini_codeforces_check.py  gemini_self_consistency.py  generate_all_plots.py  mbpp_duplicate_plots.py  measure_gemini_consistency.py  measure_gemini_consistency_mbpp.py  merge_human_annotation.py  refine_codeforces_sd.py  refine_mbpp_sample100.py  results.txt  sample_for_annotation.py  train_mbpp_classifier.py  validate_annotations.py  zebralogic_duplicate_plots.py
comparisons_benchmarks/: .gitignore  cleanup_and_compress.py  compress_jsonl.py  deduplicate_instruct.py  diagnose_parquet.py  fast_run.py  full_contamination_analysis.py  sanity_check.py  stuff
contamination_analysis/: README.md
data_creation/: data_grubber.py  data_grubber_dolmo.py  data_subsampler.py  process_full_sample.py  production.py  test.py  test_dolmo.py
datasets/: custom_murder_mysteries.json  murder_mystery.json  object_placements.json  team_allocation.json
docs/: DATASETS.md  METHODOLOGY.md  METRICS.md  SDs-level-1-claude.md
ecology/: .env.example  .gitignore  README.md  bootstrap_qwen3_evals.py  build_summary_table.py  build_tables.py  create_contaminated_dataset.py  create_exact_dataset.py  eval_base_fast.py  eval_base_hf.py  eval_base_models.py  eval_base_models_parallel.py  eval_checkpoints_hf.py  eval_checkpoints_vllm.py  eval_checkpoints_vllm_merged.py  eval_clean_model.py  eval_qwen3_checkpoints.py  eval_trained_adapters.py  eval_true_detective.py  eval_true_detective_full.py  eval_true_detective_hf.py  eval_true_detective_vllm.py  evaluate_contamination.py  plot_evals.py  plot_qwen3_evals.py  requirements.txt  run.sh  run_20ep.sh  run_benchmark_evals.py  run_experiment.py  run_experiment_llama_multigpu.py  run_experiment_mistral_multigpu.py  run_experiment_multigpu.py  run_experiment_qwen.py  run_experiment_qwen35_multigpu.py  run_experiment_qwen3_multigpu.py  run_experiment_tinker.py  run_true_detective_eval.sh  sample_dolci.py  sample_dolci_val.py  (+2 more)
finetuning/: .gitignore  01_answer_questions.py  02_finetune_model.py  03_1_eval_baseline.py  03_2_eval_musr.py  03_eval_model.py  README.md  analyze_results.py  create_exact_duplicates.py  distributed_eval_runner.py  eval_all.py  eval_all_fixed.py  eval_cosine.py  eval_exact_dupes.py  eval_humaneval.py  eval_only.py  eval_simple.py  eval_zebra.sh  filter_semantic_dupes.py  filter_training_data.py  fix_mbpp_training_data.py  ft_mixed.sh  ft_musr.sh  ft_semantic.sh  ft_zebra.sh  generate_claude_ground_truth.py  generate_semantic_dupes.py  generate_semantic_dupes_prompt.md  hf_datasets_sync.py  hf_outputs.py  hyperparam_sweep.py  launch_experiments.sh  overnight.out  p1_answer_questions.py  p2_finetune_mixed.py  p2_finetune_model.py  p2_finetune_semantic.py  p2_train_mbpp.py  p2_train_mbpp_aligned.py  p2_train_mbpp_kl.py  (+34 more)
mbpp-code-translations/: .gitignore  README.md  WSL_SETUP.md  regenerate_outputs.py  requirements.txt  translate_mbpp.py
mbpp-python-dupes/: .gitignore  README.md  generate_python_dupes.py  regenerate_outputs.py  requirements.txt
mbpp-text-dupes/: README.md
misc_scripts/: calls.py
model_diffusion/: .gitignore  README.md  classify_codeforces.py  classify_mbpp.py  sample_for_classification.py  shared_utilities.py  train_codeforces_classifier.py  train_mbpp_classifier.py
musr_dataset_scripts/: create_murder_mysteries.py  create_murder_mysteries_concurrent.py  (+13 more)
sdtd/: cli.py  (+3 more)
sdtd-llm-generation/: .env.example  .gitignore  README.md  datasets_metadata.yaml  evaluate_zebralogic.py  evaluate_zebralogic.sh  generate_final_plot.sh  plot_zebralogic_gridsize_performance.py  pyproject.toml  run_parallel_eval.sh  run_zebralogic_batch.sh  run_zebralogic_eval.sh  sdtd-cli
sdtd-llm-generation/datasets/zebralogic/: .gitignore  export_jsonl.sh  generate_sds.sh  make_jsonl.sh
sdtd-llm-generation/docs/: DATASETS.md  ERROR_HANDLING.md  LEVEL1_VARIANTS.md  METRICS_SUMMARY.md  MODELS.md  PROMPT_DESIGN.md  SDs-level-2-claude.md  VISUALIZATION.md
sdtd-llm-generation/prompts/: jsonl_templates.yaml  level1.yaml  level2.yaml
sdtd-llm-generation/sdtd/: __init__.py  cli.py  datasets.py  export.py  generate.py  reasoning.py  utils.py  visualize.py  zebralogic_transforms.py
(+3694 files in other folders)
