[project]
name = "sdtd-main"
version = "0.1.0"
description = "Scanning Semantic Duplicates of Test Data (SSDTD) - Repository for SDTD experiments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "peft>=0.13.2",
    "bitsandbytes>=0.45.5",
    "trl>=0.11.4",
    "wandb>=0.23.1",
    "datasets>=3.1.0",
    "openai>=2.2.0",
    "tabulate>=0.9.0",
    "lm-eval>=0.4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# Note: flash-attn requires CUDA and is difficult to build on Windows
# Install manually if needed: pip install flash-attn

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "production"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
target-version = "py38"

