[project]
name = "soft-contamination"
version = "0.1.0"
description = "Soft Contamination Means Benchmarks Test Shallow Generalization - ICML 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Deep Learning & NLP
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.13.2",
    "trl>=0.11.4",
    "bitsandbytes>=0.45.5",
    "datasets>=3.1.0",
    "accelerate>=0.20.0",
    # Embeddings & Tokenization
    "tiktoken>=0.5.0",
    # Scientific Computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Data Processing & Visualization
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    # APIs
    "openai>=2.2.0",
    "requests>=2.31.0",
    # Experiment Tracking
    "wandb>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# Flash Attention requires CUDA and is difficult to build on Windows.
# Install manually if needed: pip install flash-attn

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
