[project]
name = "soft-contamination"
version = "0.1.0"
description = "Soft Contamination Means Benchmarks Test Shallow Generalization - ICML 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Deep Learning & NLP
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.13.2",
    "trl>=0.11.4",
    "bitsandbytes>=0.45.5",
    "datasets>=3.1.0",
    "accelerate>=0.20.0",
    # Prebuilt CUDA kernels from HF hub (flash-attn etc) — avoids source builds
    "kernels>=0.13.0",
    # Embeddings & Tokenization
    "tiktoken>=0.5.0",
    # Scientific Computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Data Processing & Visualization
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    # APIs
    "openai>=2.2.0",
    "requests>=2.31.0",
    # Experiment Tracking
    "wandb>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# Flash Attention requires CUDA and is difficult to build on Windows.
# Install manually if needed: uv pip install setuptools && uv pip install flash-attn --no-build-isolation

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]
index-url = "https://pypi.org/simple"
# Resolve for both linux archs so uv.lock is portable across x86_64 dev boxes and aarch64 (GH200).
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# pytorch-cu124 index only publishes x86_64 wheels; on aarch64 fall back to pypi,
# whose torch wheels are built with CUDA (verified on GH200).
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
