[project]
name = "sdtd"
version = "0.1.0"
description = "Generate semantic duplicates of LLM benchmark datasets at multiple levels of abstraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "datasets>=4.4.1",
    "jinja2>=3.1.0",
    "litellm[caching]>=1.79.3",
    "matplotlib>=3.10.7",
    "openai>=2.11.0",
    "polars>=1.35.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "scipy>=1.16.3",
    "typer>=0.19.0",
]
